@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-07-27:
+
+- Fixed a bug introduced on 2022-02-08 where $PPID was incorrect when a script
+  without a #! path was executed.
+
 2022-07-26:
 
 - Fixed incorrect handling of initial zeros in test/[ and [[ arithmetic
